--- a/PersonalWebSite.Blazor/PersonalWebSite.Blazor.Client/Components/Cv/CvExperience.razor
+++ b/PersonalWebSite.Blazor/PersonalWebSite.Blazor.Client/Components/Cv/CvExperience.razor
@@ -1,4 +1,5 @@
-﻿@inject IStringLocalizer<CvExperience> L
+﻿@inherits CustomBaseComponent
+@inject IStringLocalizer<CvExperience> L
 
 <div class="timeline">
     <CvExperienceItem Company="Info. Service 34"
