--- a/PersonalWebSite.Blazor/PersonalWebSite.Blazor.Client/Components/Cv/CvExperienceItem.razor
+++ b/PersonalWebSite.Blazor/PersonalWebSite.Blazor.Client/Components/Cv/CvExperienceItem.razor
@@ -1,4 +1,5 @@
-﻿<div class=" @CssClass timeline__event animated fadeInUp delay-2s @Type timeline-geckos">
+﻿@inherits CustomBaseComponent
+<div class=" @CssClass timeline__event animated fadeInUp delay-2s @Type timeline-geckos">
     <div class="timeline__event__header d-none d-lg-flex">
         <div class="timeline__event__icon ">
             @* <i class="lni-cake"></i> *@
