--- a/PersonalWebSite.Blazor/PersonalWebSite.Blazor.Client/Components/Cv/CvGraduate.razor
+++ b/PersonalWebSite.Blazor/PersonalWebSite.Blazor.Client/Components/Cv/CvGraduate.razor
@@ -1,4 +1,5 @@
-﻿@inject IStringLocalizer<CvGraduate> L
+﻿@inherits CustomBaseComponent
+@inject IStringLocalizer<CvGraduate> L
 
 <div class="cv-title">
     <i class="fas fa-graduation-cap"></i>&nbsp;@(L["CvDiplome"])
