--- a/PersonalWebSite.Blazor/PersonalWebSite.Blazor.Client/Components/Cv/CvLang.razor
+++ b/PersonalWebSite.Blazor/PersonalWebSite.Blazor.Client/Components/Cv/CvLang.razor
@@ -1,4 +1,5 @@
-﻿@inject IStringLocalizer<CvLang> L
+﻿@inherits CustomBaseComponent
+@inject IStringLocalizer<CvLang> L
 <div class="cv-title title-lang">
     <i class="fas fa-language"></i>&nbsp;@L["Lang"]
 </div>
