--- a/PersonalWebSite.Blazor/PersonalWebSite.Blazor.Client/Components/Cv/CvSkills.razor
+++ b/PersonalWebSite.Blazor/PersonalWebSite.Blazor.Client/Components/Cv/CvSkills.razor
@@ -1,4 +1,5 @@
-﻿@inject IStringLocalizer<CvSkills> L
+﻿@inherits CustomBaseComponent
+@inject IStringLocalizer<CvSkills> L
 <div class="cv-title">
     <i class="fa-solid fa-code"></i>&nbsp;@L["Skills"]
 </div>
