--- a/PersonalWebSite.Blazor/PersonalWebSite.Blazor.Client/Components/Cv/CvHobbies.razor
+++ b/PersonalWebSite.Blazor/PersonalWebSite.Blazor.Client/Components/Cv/CvHobbies.razor
@@ -1,4 +1,5 @@
-﻿<div class="cv-title">
+﻿@inherits CustomBaseComponent
+<div class="cv-title">
     Loisirs
 </div>
 <!--<div class="left-part-subtitle">
