--- a/PersonalWebSite.Blazor/PersonalWebSite.Blazor.Client/Components/Cv/CvSkills.razor
+++ b/PersonalWebSite.Blazor/PersonalWebSite.Blazor.Client/Components/Cv/CvSkills.razor
@@ -8,6 +8,7 @@
     <img src="/images/techno/csharp.png" style="width: 50px" />
     <img src="/images/techno/logo-sqlserver.jpg" style="width: 100px" />
     <img src="/images/techno/JavaScript-logo.png" style="width: 50px" />
+    <img src="/images/techno/aspnet-featured.png" style="width: 50px" />
     <img src="/images/techno/angular.jpg" style="width: 100px" />
     <img src="/images/techno/blazor.png" style="width: 100px" />
     <img src="/images/techno/html_css.jpg" style="width: 80px" />
@@ -17,6 +18,8 @@
     <img src="/images/techno/wpf-logo-175.png" style="width: 50px" />
 
     <img src="/images/techno/visual-studio-logo.webp" style="width: 80px" />
+    
+    <img src="/images/techno/Git-logo.svg.png" style="width: 60px" />
     
     @* <div class="timeline__event__date__img__block mt-2">
         <img src="/images/techno/NET_logo.png" style="width: 50px" />
