--- a/PersonalWebSite.Blazor/PersonalWebSite.Blazor.Client/Layout/MainLayout.razor
+++ b/PersonalWebSite.Blazor/PersonalWebSite.Blazor.Client/Layout/MainLayout.razor
@@ -14,7 +14,7 @@
         
          <div class="d-flex flex-column ms-2">
             <span class="title-menu d-flex">
-                <span>Julien Gourdon</span>
+                <span>Julien Gourdon&nbsp;</span>
                 <span class="d-none d-sm-inline"> - Freelance</span>
             </span>
             <span class="job">@L["JobTitle"]</span>
