--- a/PersonalWebSite.Blazor/PersonalWebSite.Blazor.Client/Pages/Home.razor
+++ b/PersonalWebSite.Blazor/PersonalWebSite.Blazor.Client/Pages/Home.razor
@@ -1,5 +1,5 @@
 ﻿@page "/"
-
+<PageTitle>CV Julien Gourdon @System.Globalization.CultureInfo.CurrentUICulture.TwoLetterISOLanguageName</PageTitle>
 @* <PageTitle>Home</PageTitle>
 
 <h1>Hello, world!</h1>
