--- a/PersonalWebSite.Blazor/PersonalWebSite.Blazor.Client/Pages/PageCvPrint.razor
+++ b/PersonalWebSite.Blazor/PersonalWebSite.Blazor.Client/Pages/PageCvPrint.razor
@@ -1,5 +1,5 @@
 ﻿@page "/resume/print"
-<PageTitle>CV Julien Gourdon @System.Globalization.CultureInfo.CurrentUICulture.TwoLetterISOLanguageName</PageTitle>
+<PageTitle>CV Julien Gourdon</PageTitle>
 <div class="cv-container">
     <div class="cv-content printable-content">
         <div class="left-part primary-background">
