--- a/PersonalWebSite.Blazor/PersonalWebSite.Blazor/Components/App.razor
+++ b/PersonalWebSite.Blazor/PersonalWebSite.Blazor/Components/App.razor
@@ -4,6 +4,13 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta name="og:title" content="CV Julien Gourdon">
+    <meta name="og:type" content="website">
+    <meta name="og:image" content="">
+    <meta name="og:url" content="https://jgdev.fr/">
+    <meta name="og:description" content="">
+
     <base href="/" />
 
     <link href="css/fontawesome/all.min.css" rel="stylesheet" />
