--- a/PersonalWebSite.Blazor/PersonalWebSite.Blazor/Components/App.razor
+++ b/PersonalWebSite.Blazor/PersonalWebSite.Blazor/Components/App.razor
@@ -7,7 +7,7 @@
 
     <meta name="og:title" content="CV Julien Gourdon">
     <meta name="og:type" content="website">
-    <meta name="og:image" content="">
+    <meta name="og:image" content="https://jgdev.fr/images/techno/NET_logo.png">
     <meta name="og:url" content="https://jgdev.fr/">
     <meta name="og:description" content="">
 
