--- a/PersonalWebSite.Blazor/PersonalWebSite.Blazor/Components/App.razor
+++ b/PersonalWebSite.Blazor/PersonalWebSite.Blazor/Components/App.razor
@@ -5,11 +5,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta name="og:title" content="CV Julien Gourdon">
-    <meta name="og:type" content="website">
-    <meta name="og:image" content="https://jgdev.fr/images/banniere.jpg">
-    <meta name="og:url" content="https://jgdev.fr/">
-    <meta name="og:description" content="">
+    <meta property="og:title" content="CV Julien Gourdon">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://jgdev.fr/images/banniere.jpg">
+    <meta property="og:url" content="https://jgdev.fr/">
+    <meta property="og:description" content="">
 
     <base href="/" />
 
