google site verif

--- a/PersonalWebSite.Blazor/PersonalWebSite.Blazor/Components/App.razor
+++ b/PersonalWebSite.Blazor/PersonalWebSite.Blazor/Components/App.razor
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <meta name="google-site-verification" content="r5ZrUy5zD_GSltD8CNySDTR45ypUqqLQWc6eZ6-Osio">
     <meta property="og:title" content="CV Julien Gourdon">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://jgdev.fr/images/banniere.jpg">
