--- a/PersonalWebSite.Blazor/PersonalWebSite.Blazor.Client/Components/Cv/CvGeneralInfo.razor
+++ b/PersonalWebSite.Blazor/PersonalWebSite.Blazor.Client/Components/Cv/CvGeneralInfo.razor
@@ -4,7 +4,9 @@
     @*<div class="photo">
             <img src="images/photo.png" style="width: 90px; height: 90px" />
         </div>*@
-    <span class="age text-nowrap"><i class="fas fa-calendar-alt"></i>&nbsp;35 @L["Years"]</span>
+    <span class="age text-nowrap"><i class="fas fa-calendar-alt"></i>
+        &nbsp;35 @L["Years"]
+    </span>
     @*<a href="tel:+33645126661" class="phone text-nowrap ms-1"><i class="fas fa-phone"></i>+33645126661</a>*@
     <a href="mailto:jul.gourdon@gmail.com" class="mail text-nowrap"><i class="fas fa-at"></i>&nbsp;jul.gourdon@gmail.com</a>
 
@@ -12,9 +14,13 @@
     <a href="https://github.com/julienGrd" class="mail text-nowrap" target="_blank"><i class="fa-brands fa-github"></i>&nbsp;julienGrd</a>
 
     @*<a class="skype text-nowrap" href="skype:julien.gourdon?add"><i class="fab fa-skype"></i>&nbsp;julien.gourdon</a>*@
-    @if (WithCvDownload)
+    @if (!ForPrint)
     {
         <a class="" title="Exporter en PDF" style="white-space: nowrap" target="_blank" href="@($"/CV/cv_julien_gourdon_{LanguageService.GetCurrentLanguage().CultureInfo.TwoLetterISOLanguageName}.pdf")"><i class="fa-solid fa-file-pdf"></i>&nbsp;@L["Download"]</a>
+    }
+    @if (ForPrint)
+    {
+        <a class="" style="white-space: nowrap" target="_blank" href="@($"https://jgdev.fr")"><i class="fa-solid fa-globe"></i>&nbsp;jgdev.fr</a>
     }
     @*<div class="info-photo">
 
@@ -29,5 +35,5 @@
 
 @code{
     [Parameter]
-    public bool WithCvDownload { get; set; }
+    public bool ForPrint { get; set; }
 }
