--- a/PersonalWebSite.Blazor/PersonalWebSite.Blazor.Client/Pages/Home.razor
+++ b/PersonalWebSite.Blazor/PersonalWebSite.Blazor.Client/Pages/Home.razor
@@ -36,7 +36,7 @@ Welcome to your new app. *@
         <div class="container-fluid d-flex flex-grow-1">
             <div class="row flex-grow-1">
                 <div class="col-12 col-lg-3 col-xxl-2 left-part primary-background ">
-                    <CvGeneralInfo WithCvDownload="true" />
+                    <CvGeneralInfo ForPrint="false" />
                     <CvAboutMe />
                     <CvLang />
                     <CvGraduate />
