--- a/PersonalWebSite.Blazor/PersonalWebSite.Blazor.Client/Pages/PageCvPrint.razor
+++ b/PersonalWebSite.Blazor/PersonalWebSite.Blazor.Client/Pages/PageCvPrint.razor
@@ -5,7 +5,7 @@
         <div class="left-part primary-background">
             <div class="d-flex justify-content-center align-items-center">
                 <img src="images/photo.png" style="width: 60px; height: 60px" />
-                <CvGeneralInfo />
+                <CvGeneralInfo ForPrint="true" />
             </div>
             
             <CvTitle />
