--- a/PersonalWebSite.Blazor/PersonalWebSite.Blazor/wwwroot/css/site.css
+++ b/PersonalWebSite.Blazor/PersonalWebSite.Blazor/wwwroot/css/site.css
@@ -12118,10 +12118,11 @@ body main .cv-container .cv-content.printable-content .left-part {
   /*display: flex;*/
   padding: 8px;
   flex-direction: column;
-  max-width: 18rem;
+  max-width: 19.5rem;
 }
 body main .cv-container .cv-content.printable-content .left-part .photo-with-info {
   margin-left: 6px;
+  flex-direction: column;
 }
 body main .cv-container .cv-content.printable-content .left-part .name {
   font-size: 22px;
@@ -12130,7 +12131,8 @@ body main .cv-container .cv-content.printable-content .left-part .role {
   font-size: 18px;
 }
 body main .cv-container .cv-content.printable-content .left-part .resume {
-  font-size: 12px;
+  /*font-size: 12px;*/
+  font-size: 13px;
 }
 body main .cv-container .cv-content.printable-content .right-part {
   display: flex;
@@ -12217,7 +12219,7 @@ body main .cv-container .cv-content .cv-title {
   margin-bottom: 3px;
 }
 body main .cv-container .cv-content .resume {
-  font-size: 13px;
+  font-size: 14px;
   text-align: justify;
   padding-top: 5px;
 }
