--- a/PersonalWebSite.Blazor/PersonalWebSite.Blazor/Components/App.razor
+++ b/PersonalWebSite.Blazor/PersonalWebSite.Blazor/Components/App.razor
@@ -5,11 +5,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-site-verification" content="r5ZrUy5zD_GSltD8CNySDTR45ypUqqLQWc6eZ6-Osio">
+    <meta name="description" content="Freelance Développeur .NET/Web Fullstack" />
+    <meta name="keywords" content="Freelance, Développeur, Fullstack, C#, .NET, Julien Gourdon" />
     <meta property="og:title" content="CV Julien Gourdon">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://jgdev.fr/images/banniere.jpg">
     <meta property="og:url" content="https://jgdev.fr/">
-    <meta property="og:description" content="">
+    <meta property="og:description" content="reelance Développeur .NET/Web Fullstack">
 
     <base href="/" />
 
